Kubernetes-Tutorial-CSCI4253/kubernetes-tutorial-master/02-blog/02-blog-env.yaml
apiVersion: v1
kind: Pod
metadata:
  #
  # This is the name that will appear in kubectl get po
  #
  name: flask
  labels:
    app: blog
spec:
  #
  # The specification is a list of attributes, one of which
  # is the list of containers
  #
  containers:
  - name: blog
    image: eliberumen27/blog:latest
    ports:
      - containerPort: 8888
