Kubernetes-Tutorial-CSCI4253/kubernetes-tutorial-master/02-blog/03-curl.yaml
apiVersion: v1
kind: Pod
metadata:
  #
  # This is the name that will appear in kubectl get po
  #
  name: curl
  labels:
    app: curl
spec:
  #
  # The specification is a list of attributes, one of which
  # is the list of containers
  #
  containers:
  - name: curl
    image: eliberumen27/blog:latest
    #
    # We're going to always pull the most recent version
    # of this image in case we've changed it
    #
    imagePullPolicy: Always
    args:
      - /bin/sh
      - -c
      - |
        while true;
        do
          curl http://flask:8888
          sleep 5;
        done
