Kubernetes-Tutorial-CSCI4253/kubernetes-tutorial-master/02-blog/04-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-svc
spec:
  selector:
    app: blog # This service works for anything that has this app : blog selector/label, in a round robin fashion.
  ports:
  - name: flask
    port: 9999
    targetPort: 8888
    # Our port 9999 goes to the target port 8888 of the blog container
